# hyprtxt

./: .gitignore  README.md  main.py  pyproject.toml
src/hyprtxt/: __init__.py  core.py  pages.py
src/hyprtxt/static/: default.html  main.css  main.js
