[project]
name = "hyprtxt"
version = "0.1.2"
description = "a cool web framework i cooked up"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets>=16.0,<0.17",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
  { name="rivuletreal", email="rivuletreal@noah018.dev" },
]
license = {file = "UNLICENSE"}

[build-system]
requires = ["uv_build>=0.9,<0.11"]
build-backend = "uv_build"

[project.optional-dependencies]
speedy = []
